--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title>Anahit Prieto Ramirez - Education</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/anahitprietoramirez.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,23 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Anahit Prieto Ramirez
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Education📚</div>
+        <p class="lead mb-4">Hi my name is Anahit. I am 19 yearls old and first generagtion student in my family. I enjoy painting, playing tennis and spending quality time with my family and friends. I attended Canyon Springs High School, which is located in Moreno Valley California and it is where I obtained my high school diploma in 2019. I received a 4.3 overall GPA and was top 20 of my class. My family has always encouraged me to stay in school and obtain a college degree. <br><br>
 
-        Enter bio here<br><br>
+        I now attend the University of California, Riverside and I am majoring in Education with a minor in Spanish. I intend to become an Elementary teacher because I have always loved working with kids and I believe I could have a positive impact in their learning. As I have gone through my first year of college it has made me even more sure that this is what I want to do. <br><br>
 
-        Enter bio here
+        I am now working as a tutor in the high school I used to go to. This has led me to be closely involved with students. I have learned how to the patient when a student does not understand a problem, but also how to remian in control when things may get out of hand. I also work at a jewelry store near where I live. I get to work with people which is something I enjoy and also handle money.
         </p>
         <div class="social-icons">
           <a target="_blank" href="https://linkedin.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/AnahitPrietoRamirez">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:anahitprieto15@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +89,46 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Retail Sales Worker</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Golden Tower</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Explain the benefits and prices of merchandise<br> 
+              • Greet costumers and determine their needs<br>
+              • Answer costumers' questions<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">November 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0"> AVID Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Canyon Springs High School</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for tutoring students<br>
+              • Reviewing academic assignments and discussing content<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">September 2019 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Tennis Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Canyon Springs High School</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Helped athletes during prectice with training<br>
+            • Recorded scores during games<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">December 2017 - March 2018</span>
           </div>
         </div>
 
@@ -152,36 +147,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Education</div>
+            <div>Minor in Spanish</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2019 - June 2023</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -191,15 +163,25 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
-        </center>
+          <br>
+            <img src="img/ibmath.jpg" width="500px">
+            <img src="img/tutoringclass.jpg" width="500px">
+            </br>
+            <br>
+            <img src="img/tenniscourts.jpeg" width="500px">
+            <img src="img/tennisscore.jpg" width="500px">
+            </br>
+            <br>
+            <img src="img/jewerlystore.jpg" width="500px">
+            </br>
+            </center>
       </div>
     </section>
 
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Anahit Prieto Ramirez</center><br>
 
 
   </div>
